# sentiment_analysis

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/sentiment_analysis/: .env  main.py  sentiment_analysis.py  trail.ipynb
