[project]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook (>=7.4.5,<8.0.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "google-genai (>=1.30.0,<2.0.0)",
    "google-cloud-secret-manager (>=2.24.0,<3.0.0)",
    "google-cloud-storage (>=3.3.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "sentiment_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
